// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DelegateSelectorPanel /> test should be able to select multiple tags from delegate selector 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          data-name="DelegateSelectors"
        >
          <div
            class="bp3-popover-wrapper TagInput--tagInput delegatePopover bp3-fill"
          >
            <div
              class="bp3-popover-target bp3-popover-open"
            >
              <div
                class=""
              >
                <div
                  class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag bp3-intent-danger bp3-minimal TagInput--tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        harness-sample-k8s-delegate
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost bp3-multi-select-tag-input-input"
                      value="new-tag"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
            >
              <div
                class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
                style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
              >
                <div
                  class="bp3-popover bp3-minimal bp3-multi-select-popover"
                >
                  <div
                    class="bp3-popover-content"
                  >
                    <div>
                      <ul
                        class="bp3-menu"
                      >
                        <li
                          class=""
                        >
                          <a
                            class="bp3-menu-item bp3-popover-dismiss"
                          >
                            <span
                              class="bp3-icon bp3-icon-add"
                              icon="add"
                            >
                              <svg
                                data-icon="add"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  add
                                </desc>
                                <path
                                  d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <div
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Create "new-tag"
                            </div>
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DelegateSelectorPanel /> test snapshot testing 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          data-name="DelegateSelectors"
        >
          <div
            class="bp3-popover-wrapper TagInput--tagInput delegatePopover bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag bp3-intent-danger bp3-minimal TagInput--tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        harness-sample-k8s-delegate
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost bp3-multi-select-tag-input-input"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
